# trouble-makers-pc-recomp

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  KNOWN_ISSUES.md  LICENSE  PHASE1_NOTES.md  PHASE2_NOTES.md  PHASE2_NOTES_w1.md  PHASE2_NOTES_w2.md  PHASE4_NOTES_a.md  PHASE5_NOTES_a.md  PHASE5_NOTES_c.md  README.md  aspMain.us1.rsp.toml  run.sh  troublemakers.us1.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/linux/: MischiefMakersRecompiled.desktop  TroubleMakers.desktop  appimage.sh
.github/release-notes/: v0.3.5.md  v0.3.6.md  v0.3.7.md  v0.3.8.md  v0.5.0.md
.github/workflows/: build.yml
docs/: DIALOGUE_TOOLCHAIN_REGRESSION.md  PERFORMANCE.md  PHASE1.md  PHASE2_NOTES_w3.md  PHASE2_NOTES_w4.md  PHASE4_NOTES_a.md  PHASE6_NOTES_b.md  PHASE8_NOTES_rotation_wall.md  README.md  TERRAIN_POP_INVESTIGATION.md
docs/prompts/: phase2_w2_rsp.md  phase3_race_c.md  phase4_race_c.md  phase5_a_overlays.md  phase6_a_camera.md  phase6_b_wings.md  phase7_backdrop.md  phase8_a_dlforensics.md  phase8_b_layerlog.md  phase8_c_polish.md
include/: recomp_config.h
patches/N64ModernRuntime/: 0001-Fix-external-message-delivery-starvation-add-env-gua.patch  0002-do_rom_read-register-overlay-code-sections-landed-by.patch  0003-osEepromLong-Read-Write-round-nbytes-up-to-block-siz.patch  0004-Add-ultramodern-set_speed_multiplier-for-host-fast-f.patch  0005-Allow-hosts-to-disable-save-writes.patch  0006-Defer-blocked-external-messages-without-busy-waking.patch  0007-remove-temporary-event-tracing-from-hot-path.patch  0008-coalesce-duplicate-deferred-host-events.patch
patches/rt64/: 0001-widescreen-wing-clear.patch  0002-restore-4x3-texture-rectangle-clipping.patch  0002-wing-mirror.patch  0003-skip-specialized-shaders-in-ubershader-mode.patch  0004-add-present-path-telemetry.patch  0005-hide-vi-scratch-rows.patch  0006-only-expand-underfilled-rectangle-edges.patch
point_your_ai_agent_here/: PHASE3_NOTES.md  PHASE6_NOTES_a.md  PHASE7_NOTES_widescreen.md  PHASE8_NOTES_rotation_wall.md  README.md
point_your_ai_agent_here/drafts/: backdrop_band_patches.toml.draft
point_your_ai_agent_here/prompts/: phase2_w1_game.md  phase5_c_perf_audio.md  phase6_a_camera.md  phase6_b_wings.md  phase7_backdrop.md  phase8_a_dlforensics.md  phase8_b_layerlog.md  phase8_c_polish.md
prompts/: phase2_w3_graphics.md  phase2_w4_audio_input.md  phase3_race_a.md  phase3_race_b.md  phase4_race_a.md  phase4_race_b.md  phase5_b_pixels.md
screenshots/widescreen-gallery/: README.md
src/: probe_glue.cpp  probe_main.cpp
src/audio_input/: CMakeLists.txt  audio.cpp  controls.cpp  input.cpp  mm_audio_input.hpp  save.cpp
src/audio_input/tests/: controls_test.cpp
src/diagnostics/: CMakeLists.txt  telemetry.cpp  telemetry.h
src/diagnostics/tests/: telemetry_test.cpp
src/game/: CMakeLists.txt  app_dirs.cpp  app_dirs.h  debug_menu.cpp  debug_menu.h  launcher.cpp  launcher.h  main.cpp  os_stubs.cpp  register_overlays.cpp  session_log.cpp  session_log.h  widescreen.cpp
src/game/tests/: session_log_test.cpp
src/graphics/: CMakeLists.txt  mm_graphics.h  rt64_render_context.cpp
src/rsp/: CMakeLists.txt  mm_rsp.hpp  rsp_callbacks.cpp
symbols/: troublemakers.us1.toml
tools/: or_worker.sh  profile_recomp.sh  spawn_worker.sh  test_render_burst.sh  test_rotation_regressions.sh  test_terrain_pop.sh  test_widescreen_playable.sh  watch_worker.sh
